# LAVI

./: .gitignore  AGENTS.md  Input.py  LAV_utils.py  LICENSE  LLM.py  README.md  README_EN.md  TTS.py  Translate.py  VTuber.py  ai_character_system_prompt.txt  audio_device_manager.py  check_starcraft2_integrity.ps1  check_starcraft_exit.ps1  config.ini.example  main.py  modules.json  pyproject.toml  requirements.txt  requirements_cuda13_success.txt  requirements_full.txt  requirements_org.txt  run.bat  run_lav_dev.cmd  safety_filter.py  switch_CPU.bat  switch_GPU.bat
.agent/: PLANS.md
.github/workflows/: windows-ci.yml
.test_tmp/: benbot_test.json
app_core/: __init__.py  app_composer.py  component_wiring_composition.py  core_component_composition.py  gradio_launch.py  gradio_runtime_launcher.py  memory_bootstrap.py  module_config.py  optional_module_manifest.py  optional_plugin_composition.py  optional_plugin_loader.py  runtime_lifecycle.py  screen_router_bootstrap.py
app_core/composition_core/: __init__.py  app_component_wiring_service.py  app_ui_composition_service.py  core_component_composition_result.py  (+6 more)
audio_core/: device_config_store.py  device_registry.py  playback_controller.py
config/: audio_device_config.example.json  audio_device_config.json  chess_config.example.json  gpu_device_config.example.json  gpu_device_config.json  minecraft_config.example.json  modules.core.json  modules.example.json  starcraft116_config.json  starcraft2_config.example.json  starcraft2_config.json  voice_input_config.example.json
core/: __init__.py  config_manager.py  event_manager.py  global_state.py  gpu_device_manager.py  import_path.py  logger.py  paths.py  process.py  profile_resolver.py
docs/: deployment-hardening-audit.md  object_oriented_diagram.md  object_oriented_diagram_EN.md
input_core/: __init__.py  input_component.py
lavi/: __init__.py  __main__.py  cli.py
llm_core/: __init__.py  context_manager.py  event_dispatcher.py  input_queue_runtime.py  input_queue_worker.py  interaction_context.py  llm_component.py  memory_bridge.py  openai_screen_question_router_provider.py  response_pipeline.py  response_post_processor.py  screen_question_router.py  speech_style.py  streaming_chunker.py  text_only_generation.py
memory_core/: derived_memory_builder.py  derived_memory_rebuild_service.py  derived_memory_settings_panel.py  derived_memory_sqlite_store.py  memory_command_handler.py  memory_consolidator.py  memory_context_builder.py  memory_retriever.py  memory_router.py  memory_store.py  openai_memory_router_provider.py  raw_event_sqlite_store.py  rebuild_progress.py  short_term_memory_selector.py  sqlite_write_gate.py
plugin_system/: __init__.py  availability_diagnostic_service.py  availability_probe_service.py  contracts.py  interfaces.py  loader.py  registry.py  runtime_plugin_mixin.py  selection.py
plugins/StarCraft2/native/Sc2LadderServer/: CMakeLists.txt
plugins/StarCraft2/native/Sc2LadderServer/src/: CMakeLists.txt
plugins/StarCraft2/native/Sc2LadderServer/src/lavhumanvsbot/: main.cpp
plugins/StarCraft2/native/Sc2LadderServer/src/lavlanhumanvsbot/: main.cpp
plugins/StarCraft2/native/Sc2LadderServer/src/lavlanladdercore/: LanLadderGame.cpp  LanLadderGame.h  LanProxy.cpp  LanProxy.h
plugins/StarCraft2/native/Sc2LadderServer/src/lavlanladderserver/: main.cpp
plugins/StarCraft2/native/Sc2LadderServer/src/sc2laddercore/: LadderGame.cpp  LadderGame.h  MatchupList.cpp  Proxy.cpp  Proxy.h  ToolsWindows.cpp  Types.h
plugins/StarCraftRemastered/bwapi_shim/: .gitignore  CMakeLists.txt  README.md
plugins/StarCraftRemastered/bwapi_shim/docs/: saida_compatibility_matrix.md
plugins/StarCraftRemastered/bwapi_shim/examples/: minimal_saida_style_bot.cpp  mock_runtime_probe.cpp  saida_mock_runtime.cpp  scr_readonly_runtime.cpp
plugins/StarCraftRemastered/bwapi_shim/include/: BWAPI.h
plugins/StarCraftRemastered/bwapi_shim/include/BWAPI/: Client.h
plugins/StarCraftRemastered/bwapi_shim/include/LAVBWAPIRM/: Bridge.h  CompatRunner.h  FileBridge.h  GameStateProvider.h  MockBridge.h  MockGameStateProvider.h  SaidaBuildCompat.h
plugins/StarCraftRemastered/bwapi_shim/src/: BWAPI.cpp  Bridge.cpp  CompatRunner.cpp  FileBridge.cpp  MockBridge.cpp  MockGameStateProvider.cpp  SaidaMockMyBotModule.cpp
requirements/: base.txt  constraints-windows-py314-cu130.txt  dev.txt  games.txt  vision.txt  voice.txt  windows.txt
scripts/: check_memory_integrity.py  clean_bytecode.py  install_windows.ps1  preflight.py  rebuild_derived_memory.py  smoke_startup.py
tests/: conftest.py  test_active_plugin_combination_smoke.py  test_app_composer.py  test_audio_device_manager.py  test_bwapi_shim_file_bridge.py  test_bwapi_shim_second_choke_regression.py  test_chatgpt_openai.py  test_chess_controller.py  test_chess_imports.py  test_chess_lc0_engine.py  test_chess_lc0_runtime_downloader.py  test_chess_reaction_policy.py  test_core_imports.py  test_derived_memory_builder.py  test_derived_memory_settings_panel.py  test_derived_memory_sqlite_store.py  test_event_listener_isolation.py  test_event_shutdown.py  test_game_extension_contracts.py  test_gpt_sovits_imports.py  test_gpu_device_manager.py  test_gpu_device_preflight.py  test_gradio_launch.py  test_hybrid_openai_llm_router.py  test_input_core_imports.py  test_input_provider_routing.py  test_instance_state_isolation.py  test_lavi_cli.py  test_llm_input_queue_runtime.py  test_llm_memory_bridge.py  test_llm_speech_style.py  test_llm_text_only.py  test_memory_integrity_script.py  test_memory_retrieval.py  test_memory_router.py  test_minecraft_plugin.py  test_optional_plugin_composition.py  test_plugin_system_imports.py  test_rebuild_progress.py  test_repository_contract.py  (+33 more)
translation_core/: __init__.py  translate_component.py
tts_core/: __init__.py  ffmpeg_manager.py  mouth_animator.py  multilingual_list_normalizer.py  text_processor.py  tts_component.py  tts_interrupt_controller.py  tts_queue_worker.py  winsound_player.py
ui_core/: __init__.py  live_textbox.py
vtuber_core/: __init__.py  vtuber_component.py
(+644 files in other folders)
